--- a/config.toml
+++ b/config.toml
@@ -264,6 +264,11 @@ enableGitInfo = false
   weight = 3
 
 [[menu.main]]
+  name = "CV"
+  url = "pdf/cv.pdf"
+  weight = 4
+
+[[menu.main]]
   name = "Contact"
   url = "#contact"
   weight = 6
